finish puzzle2 and use httpclient